deploy: 9544249ec4f4d44d980a24e64af94c459ad63ebf

--- a/index.css
+++ b/index.css
@@ -1,2 +1,2 @@
-._text_bdddd{color:#00f}
-/*# sourceMappingURL=/micro-frontend-a/index.css.map */
+._text_2c7b09{color:#00f}
+/*# sourceMappingURL=index.css.map */
